<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_45"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <LinearLayout
        android:id="@+id/linear_layout_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_image_view"
            android:src="@mipmap/icon_bluenex"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/TextStyleBlack"
            android:text="@string/welcome"
            android:gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_image_view"
            android:src="@drawable/icon_close"
            android:tint="@color/colorGrey"
            android:padding="10dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorLightGrey"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_header"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_45">

    <LinearLayout
        android:id="@+id/linear_layout_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_image_view"
            android:src="@drawable/icon_person"
            android:tint="@color/colorPrimary"
            android:padding="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="20sp"
            android:gravity="center|start"
            android:textColor="@color/colorPrimary"
            android:text="@string/bluenex_user"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/TextStyleGrey"
            android:gravity="center|end"
            android:padding="5dp"
            android:paddingEnd="5dp"
            android:text="12.12.2020"/>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>